Include logo and update content

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@ layout: home
 search_exclude: true
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+![Hunter Data Analytics Logo](images/Logo.jpg)
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+All we ask, is for you to bring your curiosity and a top notch attitude!
 
-You can edit the `index.html` file to change this content.
+We also strongly encourage ties between academia and industry as well as student engagement.
+
+Meetups are a monthly careers expo after all.
+
+Join us!
+
+We encourage members of the community to share you work via this page by adding to the [repository](https://github.com/JackMcKew/hunterdataanalytics)!
+
+Some helpful links for creating content:
+
+- [Writing Posts With Jupyter](https://github.com/fastai/fastpages#writing-blog-posts-with-jupyter)
+
+- [Writing Posts With Markdown](https://github.com/fastai/fastpages#writing-blog-posts-with-markdown)
+
+- [Writing Posts With Word](https://github.com/fastai/fastpages#writing-blog-posts-with-microsoft-word)
 
 # Posts
