--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 ---
 
-![Hunter Data Analytics Logo](images/Logo.jpg)
+![Hunter Data Analytics Logo]({{site.baseurl}}/images/Logo.jpg)
 
 We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.
 
@@ -26,3 +26,23 @@ Some helpful links for creating content:
 - [Writing Posts With Word](https://github.com/fastai/fastpages#writing-blog-posts-with-microsoft-word)
 
 # Posts
+
+# Sponsors 🙏
+
+We'd like to thank our sponsors for their ongoing support
+
+## Branding
+
+[![Where Things Happen Logo]({{site.baseurl}}/images/WhereThingsHappen_Logo.png)](https://www.wherethingshappen.com.au/)
+
+## Pizza
+
+[![ASR Recruitment Logo]({{site.baseurl}}/images/asr-logo.png)](https://www.asr.com.au/)
+
+## Venue
+
+[![UON Logo]({{site.baseurl}}/images/uon-logo-square.png)](https://www.newcastle.edu.au/)
+
+## Meetup
+
+[![Komatsu Logo]({{site.baseurl}}/images/komatsu-logo.png)](https://www.komatsu.com.au/)
