Remove github and linked in, broken links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 search_exclude: true
 ---
 
-![Hunter Data Analytics Logo]({{site.baseurl}}/images/Logo.jpg)
+[![Hunter Data Analytics Logo]({{site.baseurl}}/images/Logo.jpg)](https://www.meetup.com/en-AU/Hunter-Data-Analytics/)
 
 We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.
 
@@ -14,6 +14,8 @@ We also strongly encourage ties between academia and industry as well as student
 Meetups are a monthly careers expo after all.
 
 Join us!
+
+Stay up to date with our events at: <https://www.meetup.com/en-AU/Hunter-Data-Analytics/>
 
 We encourage members of the community to share you work via this page by adding to the [repository](https://github.com/JackMcKew/hunterdataanalytics)!
 
