deploy: 7a94d8e91f10e1f644de9147b3b0e2cf55b57e64

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><img src="/hunterdataanalytics/images/Logo.jpg" alt="Hunter Data Analytics Logo" /></p>
+        <div class="home"><p><a href="https://www.meetup.com/en-AU/Hunter-Data-Analytics/"><img src="/hunterdataanalytics/images/Logo.jpg" alt="Hunter Data Analytics Logo" /></a></p>
 
 <p>We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.</p>
 
@@ -105,6 +105,8 @@ window.onload = wrap_img;
 <p>Meetups are a monthly careers expo after all.</p>
 
 <p>Join us!</p>
+
+<p>Stay up to date with our events at: <a href="https://www.meetup.com/en-AU/Hunter-Data-Analytics/">https://www.meetup.com/en-AU/Hunter-Data-Analytics/</a></p>
 
 <p>We encourage members of the community to share you work via this page by adding to the <a href="https://github.com/JackMcKew/hunterdataanalytics">repository</a>!</p>
 
@@ -196,7 +198,7 @@ window.onload = wrap_img;
       </div>
     </div>
 
-    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://www.linkedin.com/in/hunter-data-analytics" title="hunter-data-analytics"><svg class="svg-icon grey"><use xlink:href="/hunterdataanalytics/assets/minima-social-icons.svg#linkedin"></use></svg></a></li><li><a rel="me" href="https://twitter.com/hunteranalytics" title="hunteranalytics"><svg class="svg-icon grey"><use xlink:href="/hunterdataanalytics/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
+    <div class="social-links"><ul class="social-media-list"><li><a rel="me" href="https://www.facebook.com/hunteranalytics" title="hunteranalytics"><svg class="svg-icon grey"><use xlink:href="/hunterdataanalytics/assets/minima-social-icons.svg#facebook"></use></svg></a></li><li><a rel="me" href="https://twitter.com/hunteranalytics" title="hunteranalytics"><svg class="svg-icon grey"><use xlink:href="/hunterdataanalytics/assets/minima-social-icons.svg#twitter"></use></svg></a></li></ul>
 </div>
 
   </div>
