deploy: 5583781db5abafecf3b30522d0290ca289b6ac4c

--- a/about/index.html
+++ b/about/index.html
@@ -117,19 +117,19 @@ window.onload = wrap_img;
 
 <h3 id="branding">Branding</h3>
 
-<p><a href="https://www.wherethingshappen.com.au/"><img src="//images/WhereThingsHappen_Logo.png" alt="Where Things Happen Logo" /></a></p>
+<p><a href="https://www.wherethingshappen.com.au/"><img src="/images/WhereThingsHappen_Logo.png" alt="Where Things Happen Logo" /></a></p>
 
 <h3 id="pizza">Pizza</h3>
 
-<p><a href="https://www.asr.com.au/"><img src="//images/asr-logo.png" alt="ASR Recruitment Logo" /></a></p>
+<p><a href="https://www.asr.com.au/"><img src="/images/asr-logo.png" alt="ASR Recruitment Logo" /></a></p>
 
 <h3 id="venue">Venue</h3>
 
-<p><a href="https://www.newcastle.edu.au/"><img src="//images/uon-logo-square.png" alt="UON Logo" /></a></p>
+<p><a href="https://www.newcastle.edu.au/"><img src="/images/uon-logo-square.png" alt="UON Logo" /></a></p>
 
 <h3 id="meetup">Meetup</h3>
 
-<p><a href="https://www.komatsu.com.au/"><img src="//images/komatsu-logo.png" alt="Komatsu Logo" /></a></p>
+<p><a href="https://www.komatsu.com.au/"><img src="/images/komatsu-logo.png" alt="Komatsu Logo" /></a></p>
 
 <h3 id="website">Website</h3>
 
