--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p><a href="https://www.meetup.com/en-AU/Hunter-Data-Analytics/"><img src="//images/Logo.jpg" alt="Hunter Data Analytics Logo" /></a></p>
+        <div class="home"><p><a href="https://www.meetup.com/en-AU/Hunter-Data-Analytics/"><img src="/images/Logo.jpg" alt="Hunter Data Analytics Logo" /></a></p>
 
 <p>We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.</p>
 
@@ -132,19 +132,19 @@ window.onload = wrap_img;
 
 <h2 id="branding">Branding</h2>
 
-<p><a href="https://www.wherethingshappen.com.au/"><img src="//images/WhereThingsHappen_Logo.png" alt="Where Things Happen Logo" /></a></p>
+<p><a href="https://www.wherethingshappen.com.au/"><img src="/images/WhereThingsHappen_Logo.png" alt="Where Things Happen Logo" /></a></p>
 
 <h2 id="pizza">Pizza</h2>
 
-<p><a href="https://www.asr.com.au/"><img src="//images/asr-logo.png" alt="ASR Recruitment Logo" /></a></p>
+<p><a href="https://www.asr.com.au/"><img src="/images/asr-logo.png" alt="ASR Recruitment Logo" /></a></p>
 
 <h2 id="venue">Venue</h2>
 
-<p><a href="https://www.newcastle.edu.au/"><img src="//images/uon-logo-square.png" alt="UON Logo" /></a></p>
+<p><a href="https://www.newcastle.edu.au/"><img src="/images/uon-logo-square.png" alt="UON Logo" /></a></p>
 
 <h2 id="meetup">Meetup</h2>
 
-<p><a href="https://www.komatsu.com.au/"><img src="//images/komatsu-logo.png" alt="Komatsu Logo" /></a></p>
+<p><a href="https://www.komatsu.com.au/"><img src="/images/komatsu-logo.png" alt="Komatsu Logo" /></a></p>
 
 
 
