--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="data.newwwie.com/about/" />
 <meta property="og:site_name" content="Hunter Data Analytics" />
 <script type="application/ld+json">
-{"description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebSite","headline":"About Us","url":"data.newwwie.com/about/","name":"Hunter Data Analytics","@context":"https://schema.org"}</script>
+{"headline":"About Us","description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebSite","url":"data.newwwie.com/about/","name":"Hunter Data Analytics","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="data.newwwie.com/feed.xml" title="Hunter Data Analytics" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>About Us | Hunter Data Analytics</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="data.newwwie.com/about/" />
 <meta property="og:site_name" content="Hunter Data Analytics" />
 <script type="application/ld+json">
-{"description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebSite","headline":"About Us","url":"data.newwwie.com/about/","name":"Hunter Data Analytics","@context":"https://schema.org"}</script>
+{"headline":"About Us","description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebSite","url":"data.newwwie.com/about/","name":"Hunter Data Analytics","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
@@ -133,12 +133,12 @@ window.onload = wrap_img;
 
 <h3 id="website">Website</h3>
 
-<p>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> <sup id="fnref:1"><a href="#fn:1" class="footnote">1</a></sup>.</p>
+<p>This website is powered by <strong><a href="https://github.com/fastai/fastpages">fastpages</a></strong> <sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote">1</a></sup>.</p>
 
-<div class="footnotes">
+<div class="footnotes" role="doc-endnotes">
   <ol>
-    <li id="fn:1">
-      <p>a blogging platform that natively supports Jupyter notebooks in addition to other formats. <a href="#fnref:1" class="reversefootnote">&#8617;</a></p>
+    <li id="fn:1" role="doc-endnote">
+      <p>a blogging platform that natively supports Jupyter notebooks in addition to other formats. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
 </div>
