--- a/search/index.html
+++ b/search/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="data.newwwie.com/search/" />
 <meta property="og:site_name" content="Hunter Data Analytics" />
 <script type="application/ld+json">
-{"description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebPage","headline":"Search","url":"data.newwwie.com/search/","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebPage","url":"data.newwwie.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="data.newwwie.com/feed.xml" title="Hunter Data Analytics" /><link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Search | Hunter Data Analytics</title>
@@ -26,7 +26,7 @@
 <meta property="og:url" content="data.newwwie.com/search/" />
 <meta property="og:site_name" content="Hunter Data Analytics" />
 <script type="application/ld+json">
-{"description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebPage","headline":"Search","url":"data.newwwie.com/search/","@context":"https://schema.org"}</script>
+{"headline":"Search","description":"We are a monthly meetup that welcomes all ages, skill levels and backgrounds of the data community in Newcastle and the Hunter Region.","@type":"WebPage","url":"data.newwwie.com/search/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
